fix: 重写测试文件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "include": [
     "./src/**/*.ts",
     "./core/**/*.ts",
+    "./core/**/*.tsx",
     "./tests/**/*.ts",
+    "./tests/**/*.tsx",
     "./*.ts",
     "App.tsx",
     "main.tsx"
