--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.12.2",
+    "jsdom": "^24.1.1",
     "typescript": "^5.4.3",
     "vite": "^5.2.7",
     "vitest": "^1.4.0"
