--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20.12.2",
     "cross-env": "^7.0.3",
     "jsdom": "^24.1.1",
     "typescript": "^5.4.3",
     "vite": "^5.2.7",
     "vitest": "^1.4.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
